seo krims krams

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="EAudQGIBf4amCrjfkOpDi0Yg-gpIT6ycgAT7hg4sS-U" />
     <meta name="description" content="my personal space in the wired">
     <meta name="keywords" content="Blog, Homepage, Project">
     <meta name="author" content="zoomerlz">
